feat: add remembrances and notifications